--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -129,5 +129,9 @@ h6 {
 
 p {
   @apply mb-4;
-  line-height: 1.75;
+  line-height: 1.8;
+
+  @screen sm {
+    line-height: 2;
+  }
 }
